# recipe-chatbot

./: pyproject.toml
_nbs/: 01_improve_system_prompt.ipynb
backend/: utils.py
scripts/: bulk_test.py
