[project]
name = "recipe-chatbot"
version = "0.1.0"
description = "Foundation project for the 2025 AI Evals Course"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextkit>=0.0.6",
    "fastapi>=0.115.12",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "instructor>=1.8.0",
    "litellm>=1.70.2",
    "pdfkit>=1.0.0",
    "python-dotenv>=1.1.0",
    "rich>=13.7.0",
    "uvicorn>=0.34.2",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = ["E402"]

[tool.uv]
dev-dependencies = ["ipykernel>=6.29.5"]
